--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1376,13 +1376,13 @@
     }
     async function optimizeSubDelay() {
       if (noSub) { return; } // no need to go further without subwoofer
-      const mlpIndices = [];
+      const mlpSPIndices = [];
       for (let i = 1; i <= nSpeakers; i++) {
-        mlpIndices.push(cmdIdMLPIndices[commandId[i]]);
+        mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
       }
       const avgInitialXO = customCrossover.reduce((acc, val) => acc + val, 0) / nSpeakers;
       console.log(`Optimizing subwoofer delay for ALL speakers at MLP using average initial XO ${avgInitialXO.toFixed(2)}hz...`); 
-      const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpIndices)); // same results with RMS & VA since goal is max output
+      const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpSPIndices)); // same results with RMS & VA since goal is max output
       const avgSpeakerIdx = Object.keys(avgSpeaker.results)[0]
       const avgSpeakerWithHPF = await genSpeaker(avgSpeakerIdx, avgInitialXO);
       const avgSpeakerWithHPFIdx = Object.keys(avgSpeakerWithHPF.results)[0];
